build:more robust/reproducable travis build