@@ -38,12 +38,12 @@
     </issueManagement>
 
     <properties>
-        <!-- suppress Java 21 dynamic agent loading warning, since there is no suitable fix yet -->
-        <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        <argLine/>
         <java.version>25</java.version>
         <commons.cli.version>1.11.0</commons.cli.version>
         <samtools.htsjdk.version>4.3.0</samtools.htsjdk.version>
         <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
+        <jacoco.skip.report>false</jacoco.skip.report>
         <opencsv.version>5.12.0</opencsv.version>
         <vip.utils.version>4.0.1</vip.utils.version>
         <zstd.jni.version>1.5.7-7</zstd.jni.version>
@@ -60,33 +60,43 @@
 
     <profiles>
         <profile>
-            <id>coverage</id>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>${jacoco-maven-plugin.version}</version>
                         <executions>
+                            <!-- unit test executions -->
                             <execution>
-                                <id>prepare-agent</id>
+                                <id>prepare-agent-ut</id>
+                                <phase>initialize</phase>
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
+                                <configuration>
+                                    <destFile>${project.build.directory}/jacoco-ut.exec</destFile>
+                                </configuration>
                             </execution>
                             <execution>
-                                <id>report</id>
+                                <id>report-ut</id>
+                                <phase>prepare-package</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
+                                <configuration>
+                                    <skip>${jacoco.skip.report}</skip>
+                                    <dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
+                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                                </configuration>
                             </execution>
                             <execution>
-                                <id>check</id>
+                                <id>check-ut</id>
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>check</goal>
                                 </goals>
                                 <configuration>
+                                    <dataFile>${project.build.directory}/jacoco-ut.exec</dataFile>
                                     <rules>
                                         <rule>
                                             <element>BUNDLE</element>
@@ -94,17 +104,41 @@
                                                 <limit>
                                                     <counter>INSTRUCTION</counter>
                                                     <value>COVEREDRATIO</value>
-                                                    <minimum>0.80</minimum>
+                                                    <minimum>0.50</minimum>
                                                 </limit>
                                             </limits>
                                         </rule>
                                     </rules>
                                 </configuration>
                             </execution>
+                            <!-- integration test executions -->
+                            <execution>
+                                <id>prepare-agent-it</id>
+                                <phase>pre-integration-test</phase>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                                <configuration>
+                                    <destFile>${project.build.directory}/jacoco-it.exec</destFile>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>report-it</id>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>${jacoco.skip.report}</skip>
+                                    <dataFile>${project.build.directory}/jacoco-it.exec</dataFile>
+                                    <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
             </build>
+            <id>coverage</id>
         </profile>
     </profiles>
 
@@ -274,6 +308,11 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco-maven-plugin.version}</version>
+                </plugin>
+                <plugin>
                     <groupId>com.diffplug.spotless</groupId>
                     <artifactId>spotless-maven-plugin</artifactId>
                     <version>${maven.spotless.plugin.version}</version>
@@ -360,7 +399,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <argLine>@.mvn/jvm.config ${argLine}</argLine>
+                    <argLine>@.mvn/jvm.config @{argLine}</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -368,7 +407,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
-                    <argLine>@.mvn/jvm.config -javaagent:"${org.mockito:mockito-core:jar}" ${argLine}</argLine>
+                    <argLine>@.mvn/jvm.config -javaagent:"${org.mockito:mockito-core:jar}" @{argLine}</argLine>
                     <includes>
                         <include>**/*Test.java</include>
                     </includes>
